<resources>
    <string name="app_name">Днюхи</string>
    <string name="add">Добавить</string>
    <string name="birthday">День рождения</string>
    <string name="birthdays">Дни рождения</string>
    <string name="next_birthday">Следующий день рождения</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отменить</string>
    <string name="turns">Исполняется</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="total">Всего</string>
    <string name="search">Поиск</string>

    <string name="date">Дата</string>
    <string name="name">Имя</string>
    <string name="age">Возраст</string>
    <string name="month">Месяц</string>
    <string name="menu">Меню</string>
    <string name="left">Осталось</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="clear">Очистить</string>




    <string name="new_birthday">Новый день рождения</string>

    <!--Settings-->
    <string name="by_name">Имени</string>
    <string name="by_date">Дате</string>
    <string name="by_month">Месяцу</string>
    <string name="by_age">Возрасту</string>
    <string name="by_year">Году</string>
    <string name="by_zodiac">Зодиакту</string>

    <string name="sort">Сортировать по</string>
    <string name="extra_options">Доп. параметры</string>

    <string name="reverse">Обратный порядок</string>
    <string name="grouped">Группировать</string>


    <string name="zodiac">Зодиак</string>
    <string name="chinese_zodiac">Вост. зодиак</string>

    <!--Zodiacs-->
    <string name="aries">Овен</string>
    <string name="taurus">Телец</string>
    <string name="gemini">Близнецы</string>
    <string name="cancer">Рак</string>
    <string name="leo">Лев</string>
    <string name="virgo">Дева</string>
    <string name="libra">Весы</string>
    <string name="scorpio">Скорпион</string>
    <string name="sagittarius">Стрелец</string>
    <string name="capricorn">Козерог</string>
    <string name="aquarius">Водолей</string>
    <string name="pisces">Рыбы</string>

    <!--Chinese Zodiacs-->
    <string name="rat">Крыса</string>
    <string name="ox">Бык</string>
    <string name="tiger">Тигр</string>
    <string name="rabbit">Кролик</string>
    <string name="dragon">Дракон</string>
    <string name="snake">Змея</string>
    <string name="horse">Лошадь</string>
    <string name="goat">Коза</string>
    <string name="monkey">Обезьяна</string>
    <string name="rooster">Петух</string>
    <string name="dog">Собака</string>
    <string name="pig">Свинья</string>


    <!--Error messages-->
    <string name="name_min_length_error_message">Слишком короткое имя</string>
    <string name="empty_name_error_message">Введите имя</string>
    <string name="first_char_is_not_letter_error_message">Имя должно начинаться с буквы</string>
    <string name="element_removed">Элемент удален</string>
    <string name="element_not_found">Элемент не найден</string>
    <string name="birthdate">Дата рождения</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="birthday_not_found">День рождения не найден</string>
    <string name="error">Ошибка</string>


    <!--Notifications-->
    <string name="reminders">Напоминания</string>
    <string name="reminders_channel_id" translatable="false">reminders_channel_id</string>

    <string name="notification_birthday_in_a_week">Через неделю празднует день рождения</string>
    <string name="notification_birthday_today">Сегодня празднует день рождения!</string>
    <string name="notification_birthday_tomorrow">Завтра празднует день рождения!</string>

    <!--Plurals-->
    <plurals name="left">
        <item quantity="one">Остался</item>
        <item quantity="few">Осталось</item>
        <item quantity="many">Осталось</item>
    </plurals>

    <plurals name="day">
        <item quantity="zero">%d дней</item>
        <item quantity="one">%d день</item>
        <item quantity="few">%d дня</item>
        <item quantity="many">%d дней</item>
    </plurals>

    <plurals name="age">
        <item quantity="one">%d год</item>
        <item quantity="few">%d года</item>
        <item quantity="many">%d лет</item>
    </plurals>




</resources>