<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SheetLayoutStyle"
    tools:ignore="ContentDescription">

    <include layout="@layout/bottom_sheet_grapple" />

    <include layout="@layout/normal_separator_layout" />

    <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
        android:id="@+id/name_text_view"
        style="@style/NormalTextStyle"
        android:layout_width="match_parent"
        android:background="@drawable/panel"
        android:gravity="center"
        android:paddingHorizontal="@dimen/medium_distance"
        android:paddingVertical="@dimen/normal_distance"
        tools:text="Username Username" />

    <include layout="@layout/small_separator_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            style="@style/BackPanelLayoutStyle"
            android:layout_weight="1">

            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/ic_cake_medium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_distance"
                android:orientation="vertical">

                <TextView
                    style="@style/AutoSizeMediumTextStyle"
                    android:text="@string/turns" />

                <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
                    android:id="@+id/turns_years_old_text_view"
                    style="@style/AutoSizeSmallLightTextStyle"
                    android:layout_marginTop="@dimen/very_small_distance"
                    tools:text="20 лет" />

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/small_separator_layout" />

        <LinearLayout
            style="@style/BackPanelLayoutStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/ic_alarm_medium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_distance"
                android:orientation="vertical">

                <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
                    android:id="@+id/days_left_text_view"
                    style="@style/AutoSizeMediumTextStyle"
                    tools:text="@string/left" />

                <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
                    android:id="@+id/days_to_birthday_text_view"
                    style="@style/AutoSizeSmallLightTextStyle"
                    android:layout_marginTop="@dimen/very_small_distance"
                    tools:text="200 days" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/normal_separator_layout" />

    <LinearLayout style="@style/BackPanelLayoutStyle">

        <ImageView
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_event_repeat_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_distance"
            android:orientation="vertical">

            <TextView
                style="@style/AutoSizeMediumTextStyle"
                android:text="@string/next_birthday" />

            <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
                android:id="@+id/birthdate_text_view"
                style="@style/AutoSizeSmallLightTextStyle"
                android:layout_marginTop="@dimen/very_small_distance"
                tools:text="Четверг, 9 марта 2022 г." />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/small_separator_layout" />

    <LinearLayout style="@style/BackPanelLayoutStyle">

        <ImageView
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_event_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_distance"
            android:orientation="vertical">

            <TextView
                style="@style/AutoSizeMediumTextStyle"
                android:text="@string/birthdate" />

            <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
                android:id="@+id/birthday_text_view"
                style="@style/AutoSizeSmallLightTextStyle"
                android:layout_marginTop="@dimen/very_small_distance"
                tools:text="Вторинк, 9 марта 2002 г." />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/normal_separator_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            style="@style/BackPanelLayoutStyle"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ru.daniilglazkov.birthdays.ui.core.view.image.CustomResImageView
                android:id="@+id/zodiac_image_view"
                style="@style/ImageViewStyle"
                tools:src="@drawable/ic_zodiac_aquarius_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/medium_distance"
                android:orientation="vertical">

                <TextView
                    style="@style/AutoSizeMediumTextStyle"
                    android:text="@string/zodiac" />

                <ru.daniilglazkov.birthdays.ui.core.view.text.CustomResTextView
                    android:id="@+id/zodiac_text_view"
                    style="@style/AutoSizeSmallLightTextStyle"
                    android:layout_marginTop="@dimen/very_small_distance"
                    tools:text="Рыба" />

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/small_separator_layout" />

        <LinearLayout
            style="@style/BackPanelLayoutStyle"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ru.daniilglazkov.birthdays.ui.core.view.image.CustomResImageView
                style="@style/ImageViewStyle"
                android:rotation="86.50"
                android:scaleX="-1"
                android:src="@drawable/ic_yin_yang_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/medium_distance"
                android:orientation="vertical">

                <TextView
                    style="@style/AutoSizeMediumTextStyle"
                    android:text="@string/chinese_zodiac" />

                <ru.daniilglazkov.birthdays.ui.core.view.text.CustomResTextView
                    android:id="@+id/chinese_zodiac_text_view"
                    style="@style/AutoSizeSmallLightTextStyle"
                    android:layout_marginTop="@dimen/very_small_distance"
                    tools:text="Лошадь" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/normal_separator_layout"/>

    <ru.daniilglazkov.birthdays.ui.core.view.toggle.ToggleButtonView
        android:id="@+id/delete_button"
        style="@style/ButtonWithIcon"
        android:paddingVertical="@dimen/small_distance"
        app:disableColor="@color/text"
        app:enableColor="@color/white"
        app:baseBackground="@drawable/panel"
        app:disableBackgroundTint="@color/gray"
        app:disableDrawable="@drawable/ic_close_medium"
        app:disableText="@string/cancel"
        app:enableBackgroundTint="@color/red"
        app:enableDrawable="@drawable/ic_person_remove_fill_medium"
        app:enableText="@string/delete" />

    <include layout="@layout/normal_separator_layout"/>

</LinearLayout>