<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SheetLayoutStyle"
    android:theme="@style/Theme.Birthdays">

    <include
        android:id="@+id/grapple"
        layout="@layout/bottom_sheet_grapple" />

    <TextView
        style="@style/LargeTextStyle"
        android:paddingVertical="@dimen/normal_distance"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/new_birthday"
        android:textSize="@dimen/large_text" />

    <ru.daniilglazkov.birthdays.ui.core.view.input.CustomTextInputLayout
        android:id="@+id/name_text_input_layout"
        style="@style/TextInputLayoutStyle"
        android:paddingHorizontal="@dimen/large_distance"
        android:paddingVertical="@dimen/very_small_distance"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeErrorColor="@color/red"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/name_max_length"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red">

        <ru.daniilglazkov.birthdays.ui.core.view.input.CustomInputEditText
            android:id="@+id/name_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="@integer/name_max_length"
            android:textColor="@color/text"
            tools:ignore="TextContrastCheck" />

    </ru.daniilglazkov.birthdays.ui.core.view.input.CustomTextInputLayout>

    <include layout="@layout/small_separator_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
            android:id="@+id/turn_age_text_view"
            style="@style/TextWithBackgroundStyle"
            android:layout_marginEnd="@dimen/normal_distance"
            android:layout_weight="0"
            android:backgroundTint="@color/violet"
            android:drawableStart="@drawable/ic_cake_fill_small"
            android:textColor="@color/white"
            tools:text="20 years" />

        <ru.daniilglazkov.birthdays.ui.core.view.text.CustomTextView
            android:id="@+id/until_day_text_view"
            style="@style/TextWithBackgroundStyle"
            android:layout_weight="0"
            android:backgroundTint="@color/gray"
            android:drawableStart="@drawable/ic_alarm_fill_small"
            android:paddingVertical="@dimen/medium_distance"
            android:textColor="@color/text"
            app:drawableTint="@color/text"
            tools:text="360 days" />

    </LinearLayout>

    <include layout="@layout/normal_separator_layout" />

    <ru.daniilglazkov.birthdays.ui.core.view.picker.CustomDatePicker
        android:id="@+id/date_picker"
        style="@style/DatePickerStyle" />

    <include layout="@layout/normal_separator_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/clear_image_button"
            style="@style/ImageButtonStyle"
            android:contentDescription="@string/clear"
            android:src="@drawable/ic_restart_small" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_button"
            style="@style/ButtonWithIcon"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/normal_distance"
            android:backgroundTint="@color/blue"
            android:drawableStart="@drawable/ic_add_small"
            android:text="@string/add" />

    </LinearLayout>

    <include layout="@layout/normal_separator_layout" />

</LinearLayout>